--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'org.springframework.boot' version '2.2.1.RELEASE'
     id 'com.adarshr.test-logger' version '1.6.0'
 }
-ext.junitJupiterVersion = '5.3.2'
+ext.junitVersion = '4.12'
+ext.hamcrestVersion = '1.3'
+ext.mockitoVersion = '1.9.5'
+ext.openAPIVersion = '1.4.6'
 
 apply plugin: 'java'
 apply plugin: 'groovy'
@@ -25,15 +28,18 @@ dependencies {
     compile group: 'io.micrometer', name: 'micrometer-registry-prometheus'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     compile group: 'org.projectlombok', name: 'lombok'
+    compile group: 'org.springdoc', name: 'springdoc-openapi-ui', version: openAPIVersion
+    compile group: 'org.springdoc', name: 'springdoc-openapi-webmvc-core', version: openAPIVersion
     annotationProcessor group: 'org.projectlombok', name: 'lombok'
 
     runtime group: 'com.h2database', name: 'h2'
 
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.17.0'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    testCompile group: 'junit', name: 'junit', version: junitVersion
+    testCompile group: 'org.mockito', name: 'mockito-all', version: mockitoVersion
+    testCompileOnly group: 'org.projectlombok', name: 'lombok'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok'
     testImplementation group: "org.spockframework", name: 'spock-core', version: '2.0-M3-groovy-2.5'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitJupiterVersion
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitJupiterVersion
+
 }
 
