--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:zenjob
+    url: jdbc:h2:mem:zenjobtest
     username: zenjob
     password: challenge
 
@@ -15,13 +15,10 @@ spring:
     hibernate.ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
     open-in-view: false
-
-  springdoc:
-    api-docs:
-      path: /api-docs
-
   application:
     name: backend-challenge
 server.servlet.context-path: /${spring.application.name}
 
-
+logging:
+  level:
+    org.springframework.web: DEBUG
